--- a/Lab3/sdi-lab3.html
+++ b/Lab3/sdi-lab3.html
@@ -16,6 +16,6 @@
 <footer>
     <p>COMPLETION DATE, FULL NAME</p>
 </footer>
-<script type="text/javascript" src="rename-me.js"></script>
+<script type="text/javascript" src="matthew_maicke_lab3.js"></script>
 </body>
 </html>
